src/components/ArticlePreview/ArticlePreview.module.scss
@use '../../styles/settings/gutters';
@use '../../styles/settings/colors';
@use '../../styles/settings/fonts';

.articlePreview {
    flex: 0 1 352px;
    margin: 0 gutters.$gutter;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    transition: 700ms;

    .imageBox {
        margin-bottom: gutters.$gutter-medium;
        filter: drop-shadow(0px 4px 16px rgba(20, 165, 255, 0.16));
    }

    .image {
        border-radius: 4px;
    }

    .date {
        color: colors.$color-text;
        font-size: 12px;
        line-height: 1.4;
        font-weight: 400;
        letter-spacing: -0.01em;
        margin-bottom: gutters.$gutter-small * 1.5;
    }

    .title {
        font-size: 16px;
        color: colors.$color-primary;
        line-height: 1.25;
        font-family: fonts.$font-headline;
        letter-spacing: -0.01em;
        margin-bottom: gutters.$gutter-small;
    }

    p {
        font-size: 14px;
        line-height: 1.4;
        letter-spacing: -0.01em;
        color: colors.$color-text;
        margin: 0 0 gutters.$gutter-medium;
    }

    .horizontal {
        display: flex;
        flex-direction: row;
        margin-bottom: gutters.$gutter-medium;

        > a {
            flex: 1 0 auto;
        }

        .imageBox {
            margin-bottom: 0;
            font-size: 0;
        }

        .content {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            margin-left: (gutters.$gutter * 2);
            justify-content: space-between;
        }

        .title {
            font-size: 24px;
        }
    }

    .external {
        position: absolute;
        z-index: 2;
        top: gutters.$gutter;
        left: gutters.$gutter;
        font-size: 13px;
        text-transform: uppercase;
        color: colors.$color-primary-100;
        background: colors.$color-primary;
        padding: 11px 12px;
        font-family: fonts.$font-headline;
        line-height: 1;
    }
}

